// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
//                         SECURE CHAT SERVER - MAIN
// gRPC Authentication + Admin Service ve TCP Chat Server
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

#include <iostream>
#include <thread>
#include <grpcpp/grpcpp.h>

// Proje header'larÄ±
#include "TokenManager.hpp"
#include "DataBaseManager.hpp"
#include "AuthService.hpp"
#include "AdminService.hpp"
#include "ChatService.hpp"
#include "ChatServer.hpp"

// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
// PORT AYARLARI
// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
constexpr int GRPC_PORT = 50051;      // gRPC sunucu portu (Auth + Admin)
constexpr int TCP_PORT = 5000;         // TCP Chat sunucu portu

// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
// gRPC SUNUCU BAÅLATMA FONKSÄ°YONU
// AuthService, AdminService ve ChatService'i aynÄ± sunucuda Ã§alÄ±ÅŸtÄ±rÄ±r
// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
void runGrpcServer(TokenManager& token_manager, DataBaseManager& db_manager, 
                   AdminServiceImpl& admin_service, ChatServer& chat_server, ChatServiceImpl& chat_service)
{
    // Sunucu adresi
    std::string server_address = "0.0.0.0:" + std::to_string(GRPC_PORT);
    
    // Auth Service instance (TokenManager ve DataBaseManager referanslarÄ± ile)
    AuthServiceImp auth_service(token_manager, db_manager);
    
    // Chat Service instance (main'de oluÅŸturuldu, referans olarak geÃ§irilecek)
    // Not: ChatService instance'Ä± main'de oluÅŸturuldu, burada sadece referans alÄ±yoruz
    
    // gRPC Server Builder
    grpc::ServerBuilder builder;
    
    // Dinlenecek adresi ekle (gÃ¼venlik yok - geliÅŸtirme ortamÄ±)
    builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
    
    // Servisleri kaydet
    builder.RegisterService(&auth_service);      // Login/Register servisi
    builder.RegisterService(&admin_service);     // Admin servisi
    builder.RegisterService(&chat_service);      // Chat servisi (gerÃ§ek zamanlÄ± mesajlaÅŸma - referans)
    
    // Sunucuyu oluÅŸtur ve baÅŸlat
    std::unique_ptr<grpc::Server> server(builder.BuildAndStart());
    
    std::cout << "â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•" << std::endl;
    std::cout << "[gRPC Server] Baslatildi - Port: " << GRPC_PORT << std::endl;
    std::cout << "  â”œâ”€ AuthService  : Login, Register, UserStatus" << std::endl;
    std::cout << "  â”œâ”€ AdminService : Yetki, ban, broadcast islemleri" << std::endl;
    std::cout << "  â””â”€ ChatService  : GerÃ§ek zamanlÄ± mesajlaÅŸma (bidirectional streaming)" << std::endl;
    std::cout << "â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•" << std::endl;
    
    // Sunucu kapanana kadar bekle
    server->Wait();
}

// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
// TCP CHAT SUNUCU BAÅLATMA FONKSÄ°YONU
// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
void runTcpServer(ChatServer& chat_server)
{
    try
    {
        chat_server.start();
    }
    catch (const std::exception& e)
    {
        std::cerr << "[TCP Server] Hata: " << e.what() << std::endl;
    }
}

// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
// MAIN FONKSÄ°YONU
// â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
int main()
{
    std::cout << std::endl;
    std::cout << "â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—" << std::endl;
    std::cout << "â•‘                                                               â•‘" << std::endl;
    std::cout << "â•‘              ğŸ” SECURE CHAT SERVER v2.0 ğŸ”                    â•‘" << std::endl;
    std::cout << "â•‘                                                               â•‘" << std::endl;
    std::cout << "â•‘  Ozellikler:                                                  â•‘" << std::endl;
    std::cout << "â•‘    âœ“ gRPC Authentication (Login)                              â•‘" << std::endl;
    std::cout << "â•‘    âœ“ User Registration (Database)                             â•‘" << std::endl;
    std::cout << "â•‘    âœ“ Real-time Online Status Stream                           â•‘" << std::endl;
    std::cout << "â•‘    âœ“ Admin Service (Yetki, Ban, Broadcast)                    â•‘" << std::endl;
    std::cout << "â•‘    âœ“ Real-time Chat (gRPC Bidirectional Streaming)           â•‘" << std::endl;
    std::cout << "â•‘    âœ“ TCP Socket Chat                                          â•‘" << std::endl;
    std::cout << "â•‘    âœ“ Permission-Based Access Control                          â•‘" << std::endl;
    std::cout << "â•‘                                                               â•‘" << std::endl;
    std::cout << "â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•" << std::endl;
    std::cout << std::endl;

    // Database Manager instance
    DataBaseManager db_manager;
    if (!db_manager.isConnected())
    {
        std::cout << "[WARNING] Database baglantisi kurulamadi - Sadece hardcoded kullanicilar aktif" << std::endl;
    }

    // PaylaÅŸÄ±lan Token Manager instance
    TokenManager token_manager;
    
    // Admin Service instance (callback'ler iÃ§in eriÅŸim gerekli)
    AdminServiceImpl admin_service(token_manager, db_manager);
    
    // ChatServer instance (callback'ler iÃ§in)
    ChatServer chat_server(TCP_PORT, token_manager);
    
    // ChatService instance (callback'ler iÃ§in)
    ChatServiceImpl chat_service(token_manager, db_manager);
    
    // AdminService callback'lerini ChatServer'a baÄŸla
    admin_service.setBroadcastCallback([&chat_server](const std::string& msg, bool is_system) {
        return chat_server.broadcastMessage(msg, is_system);
    });
    
    admin_service.setPrivateMessageCallback([&chat_server](const std::string& username, const std::string& msg) {
        return chat_server.sendPrivateMessage(username, msg);
    });
    
    admin_service.setKickCallback([&chat_server](const std::string& username, const std::string& reason) {
        return chat_server.kickUser(username, reason);
    });
    
    // AdminService yetki deÄŸiÅŸikliÄŸi callback'ini ChatService ve ChatServer'a baÄŸla
    admin_service.setPermissionChangeCallback([&chat_service, &chat_server](const std::string& username, Permission new_perm) {
        // gRPC stream Ã¼zerinden bildirim gÃ¶nder
        chat_service.notifyPermissionChange(username, new_perm);
        
        // TCP Ã¼zerinden sadece ilgili kullanÄ±cÄ±ya bildirim gÃ¶nder (broadcast deÄŸil, private message)
        std::string perm_msg = "[SISTEM] Yetkiniz guncellendi: " + 
                              std::to_string(static_cast<int>(new_perm)) + 
                              " | PERM_UPDATE:" + std::to_string(static_cast<int>(new_perm)) + "\n";
        chat_server.sendPrivateMessage(username, perm_msg);
    });
    
    // gRPC sunucusunu ayrÄ± thread'de baÅŸlat
    std::thread grpc_thread([&token_manager, &db_manager, &admin_service, &chat_server, &chat_service]() {
        runGrpcServer(token_manager, db_manager, admin_service, chat_server, chat_service);
    });
    
    // Ana thread'de TCP sunucusunu baÅŸlat
    runTcpServer(chat_server);
    
    // gRPC thread'inin bitmesini bekle (normalde sonsuz dÃ¶ngÃ¼)
    grpc_thread.join();
    
    return 0;
}